# hazel

./: Makefile  SearchPlan.md  TODO.md  basic_reference.txt  dune-project  hazel.opam  hazel.opam.locked
browsertest/: package.json  pnpm-lock.yaml  tsconfig.json
browsertest/src/: extract.d.ts  extract.js  game.py  index.ts  utils.ts  websocket.py
docs/: stepper-and-filter.md  ui-architecture.md
src/haz3lcore/: BranchUsed.re  CodeString.re  LabeledTuple.re  Measured.re  MetaVar.re  VarMap.re  dune
src/haz3lmenhir/: AST.re  Conversion.re  Lexer.mll  Parser.automaton  Parser.conflicts  Parser.mly  dune
src/haz3lschool/: Exercise.re  GradePrelude.re  Gradescope.re  Grading.re  ProofCore.re  ProofGrade.re  Tutorial.re  TutorialGradescope.re  TutorialGrading.re
src/haz3lweb/: Editors.re  Example.re  Export.re  FailedInput.re  FontMetrics.re  Grading.re  Init.ml  Keyboard.re  LangDocMessages.re  LocalStorage.re  Log.re  Main.re  Model.re  ModelResult.re  ModelResults.re  PersistentData.re  PersistentZipper.re  ProgramEvaluator.re  SchoolExercise.re  ScratchSlide.re  ScratchSlidesInit.re  Settings.re  SlideContent.re  State.re  Store.re  Tutorial.re  TutorialGrading.re  Update.re  UpdateAction.re  dune
src/lwtutil/: Lwt_observable.re  Lwt_timed.rei
src/pretty/: Cost.re  Doc.re  MeasuredLayout.re  MeasuredLayout.rei  MeasuredPosition.re
src/util/: Aba.re  BonsaiUtil.re  JsUtil.re  ListUtil.re  MapUtil.re  (+6 more)
test/: Test_Elaboration.re  Test_Evaluator.re  Test_ExpToSegment.re  Test_MakeTerm.re  Test_Menhir.re  Test_Statics.re  Test_StringUtil.re  dune  haz3ltest.re
(+241 files in other folders)
