(library
 (name haz3lmenhir)
 (libraries util re sexplib unionFind haz3lcore qcheck-alcotest)
 (modules AST Conversion Interface Lexer Parser)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps
   ppx_let
   ppx_sexp_conv
   ppx_deriving.show
   ppx_yojson_conv
   ppx_deriving_qcheck)))

(ocamllex Lexer)

(menhir
 (modules Parser)
 (flags --explain --dump))
